--- a/inference_mmu.ipynb
+++ b/inference_mmu.ipynb
@@ -32,23 +32,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[93m [WARNING] \u001b[0m async_io requires the dev libaio .so object and headers but these were not found.\n",
-      "\u001b[93m [WARNING] \u001b[0m async_io: please install the libaio-dev package with apt\n",
-      "\u001b[93m [WARNING] \u001b[0m If libaio is already installed (perhaps from source), try setting the CFLAGS and LDFLAGS environment variables to where it can be found.\n",
-      "\u001b[93m [WARNING] \u001b[0m Please specify the CUTLASS repo directory as environment variable $CUTLASS_PATH\n",
-      "\u001b[93m [WARNING] \u001b[0m sparse_attn requires a torch version >= 1.5 and < 2.0 but detected 2.2\n",
-      "\u001b[93m [WARNING] \u001b[0m using untested triton version (2.2.0), only 1.0.0 is known to be compatible\n"
+      "\u001B[93m [WARNING] \u001B[0m async_io requires the dev libaio .so object and headers but these were not found.\n",
+      "\u001B[93m [WARNING] \u001B[0m async_io: please install the libaio-dev package with apt\n",
+      "\u001B[93m [WARNING] \u001B[0m If libaio is already installed (perhaps from source), try setting the CFLAGS and LDFLAGS environment variables to where it can be found.\n",
+      "\u001B[93m [WARNING] \u001B[0m Please specify the CUTLASS repo directory as environment variable $CUTLASS_PATH\n",
+      "\u001B[93m [WARNING] \u001B[0m sparse_attn requires a torch version >= 1.5 and < 2.0 but detected 2.2\n",
+      "\u001B[93m [WARNING] \u001B[0m using untested triton version (2.2.0), only 1.0.0 is known to be compatible\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "from PIL import Image\n",
-    "from tqdm import tqdm\n",
-    "import numpy as np\n",
     "import torch\n",
-    "# import wandb\n",
     "from models import Showo, MAGVITv2\n",
     "from training.prompting_utils import UniversalPrompting, create_attention_mask_for_mmu, create_attention_mask_for_mmu_vit\n",
     "from training.utils import get_config, flatten_omega_conf, image_transform\n",
@@ -600,7 +594,7 @@
     "# inference\n",
     "from PIL import Image\n",
     "## arguments\n",
-    "input_image_path =\"/home/grads/h/hasnat.md.abdullah/Show-o/mmu_validation/sofa_under_water.jpg\"\n",
+    "input_image_path =\"./mmu_validation/sofa_under_water.jpg\"\n",
     "questions ='Please describe this image in detail. *** Do you think the image is unusual or not?'\n",
     "\n",
     "## processing\n",
