Support image path from local or web url

--- a/inference_mmu.ipynb
+++ b/inference_mmu.ipynb
@@ -113,17 +113,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "source": [
-    "# input image\n",
-    "from IPython.display import Image\n",
-    "\n",
-    "image_path = \"/home/grads/h/hasnat.md.abdullah/Show-o/mmu_validation/sofa_under_water.jpg\"\n",
-    "Image(filename=image_path)"
-   ],
-   "outputs": []
+     "cell_type": "code",
+     "execution_count": 1,
+     "metadata": {},
+     "source": [
+       "import os\n",
+       "import requests\n",
+       "from IPython.display import Image\n",
+       "from urllib.parse import urlparse\n",
+       "\n",
+       "def load_image(path_or_url, save_dir=\"downloaded_images\"):\n",
+       "    \"\"\"Load image from local path or URL.\"\"\"\n",
+       "    if os.path.exists(path_or_url):\n",
+       "        return Image(filename=path_or_url)\n",
+       "\n",
+       "    os.makedirs(save_dir, exist_ok=True)\n",
+       "    filename = os.path.join(save_dir, os.path.basename(urlparse(path_or_url).path))\n",
+       "    \n",
+       "    with requests.get(path_or_url, stream=True) as r:\n",
+       "        if r.status_code == 200:\n",
+       "            with open(filename, \"wb\") as f:\n",
+       "                for chunk in r.iter_content(1024):\n",
+       "                    f.write(chunk)\n",
+       "            return Image(filename=filename)\n",
+       "    \n",
+       "    print(\"Failed to load image.\")\n",
+       "    return None\n",
+       "\n",
+       "# Example usage\n",
+       "image_path_or_url = \"/home/grads/h/hasnat.md.abdullah/Show-o/mmu_validation/sofa_under_water.jpg\"  # Or a URL\n",
+       "load_image(image_path_or_url)"
+     ],
+     "outputs": []
   },
   {
    "cell_type": "code",
